Fix Issue on mobile Devices with loading container

--- a/src/app.css
+++ b/src/app.css
@@ -130,7 +130,7 @@ h6 {
 }
 
 .loadingContainer {
-  width: 500px;
+  max-width: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
